samples/_failures_safe/1761434541_c30339_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7ece6b5.c: In function ‘main’:
./samples/SAFE/__tmp_f7ece6b5.c:158:5: error: expected declaration or statement at end of input
  158 |     } else {
      |     ^
./samples/SAFE/__tmp_f7ece6b5.c:158:5: error: expected declaration or statement at end of input
